Fix spacing for left side elements

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -48,11 +48,19 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  padding: 0;
+  gap: 16px;
 }
 
 .right {
   display: flex;
   margin-left: auto;
+  gap: 16px;
+  align-items: center;
+}
+
+.left {
+  display: flex;
   gap: 16px;
   align-items: center;
 }
